# ML-Internship-Home-Assignment

./: README.md  dashboard.py  pyproject.toml  run.sh
data_ml_assignment/api/: inference_route.py  main.py  server.py
data_ml_assignment/models/: base_model.py  naive_bayes_model.py  svc_model.py  xgbc_model.py
data_ml_assignment/training/: train_pipeline.py
