[tool.poetry]
name = "data-ml-assignment"
version = "0.1.0"
description = ""
authors = ["mohamedhajja <mohamedhajja22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.2"
joblib = "1.3.2"
matplotlib = "3.8.0"
nltk = "3.8.1"
numpy = "1.24.3"
pandas = "2.0.2"
pydantic = "2.4.2"
Requests = "2.31.0"
scikit_learn = "1.3.1"
seaborn = "0.13.0"
streamlit = "1.27.2"
uvicorn = "0.23.2"
wordcloud = "1.9.2"
xgboost = "2.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
